PR 56354: all actions to set up swap space are not guaranteed to gain us enough virtual memory anyway, so drop return codes from set_swap*. The state for cleanup (which swap dev to unuse) has been made global some time ago anyway.

Previously use of the return values was inconsistent. Error reporting
will only confuse users and sometimes the situation is hard to fix or
even impossible (like in miniroots copide to swap space for booting).